# cmr_monitoring

./: .gitignore  .gitlab-ci.yml  README.md  cmrmonitoring_kinetic.rosinstall
cmr_gui_bridge/: CMakeLists.txt  package.xml
cmr_gui_bridge/gui/: OccGridColored.js  gui.html  gui_costmap_nostick.html  gui_old.html
cmr_gui_bridge/gui/nav2djs/examples/: image.html  occupancygrid.html
cmr_gui_bridge/gui/nipplejs/src/: nipple.js
cmr_gui_bridge/launch/: web_gui.launch
cmr_gui_bridge/scripts/: initial_pose_publisher.py  web_server.sh
cmr_logging/: CMakeLists.txt  package.xml
cmr_logging/cfg/: log_topics_throttled.yaml  log_topics_throttled_nav.yaml  log_topics_unthrottled.yaml  log_topics_unthrottled_nav.yaml
cmr_logging/evaluation_scripts/: evaluate_bag.py  evaluate_monitoring.py
cmr_logging/launch/: log_to_db.launch  mongodb_log.launch  mongodb_log.sh  mongodb_play.launch  mongodb_play.sh  mongodb_to_rosbag.launch  mongodb_to_rosbag.sh
cmr_logging/scripts/: download_multiple_bags.sh  log_when_online.sh  start_throttlers.py  topics_to_param.py
cmr_logging/src/: latch_republisher.cpp
cmr_monitoring/: CMakeLists.txt  cmr_bt_monitoring_tree_nodes.xml  monitoring_main.xml  package.xml
cmr_monitoring/cfg/: mappings.yaml  messages.yaml  node_mon_charging.yaml  node_mon_operating.yaml  rosconsole.config  topic_mon_operating.yaml
cmr_monitoring/include/cmr_monitoring/: launch_tools.h  monitoring_bt.h
cmr_monitoring/include/cmr_monitoring/bt_nodes/: monitoring_conditions.h  monitoring_nodes.h  start_stop_nodes.h
cmr_monitoring/include/cmr_monitoring/monitoring_monitors/: movebase_monitor.h  rtabmap_monitor.h
cmr_monitoring/launch/: axserver.launch  monitoring.launch  monitoring_bt.launch
cmr_monitoring/scripts/: rosbag_monitoring_extract.py  start_monitoring.sh
cmr_monitoring/src/: launch_tools.cpp  monitoring_bt.cpp
cmr_monitoring/src/bt_nodes/: monitoring_conditions.cpp  monitoring_nodes.cpp  start_stop_nodes.cpp
cmr_monitoring/src/monitoring_monitors/: movebase_monitor.cpp  rtabmap_monitor.cpp
cmr_monitoring/srv/: KillNode.srv
