<?xml version="1.0"?>
<package format="2">
  <name>cmr_monitoring</name>
  <version>0.1.0</version>
  <description>cmr_monitoring</description>

  <maintainer email="Marvin.Stuede@imes.uni-hannover.de">Marvin Stuede</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmr_api</depend>
  <depend>cmr_bt_generic</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_srvs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>behaviortree_ros</depend>
  <depend>monitoring_msgs</depend>
  <depend>roslaunch_axserver</depend>
  <depend>message_generation</depend>
  <depend>monitoring_core</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>rtabmap_ros</depend>
  <depend>python-tqdm</depend>
</package>
